force-app/main/default/objects/Custom_File__c/Custom_File__c.object-meta.xml
<CustomObject>
    <label>Custom File</label>
    <nameField>
        <label>Custom File Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom Files</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>