force-app/main/default/objects/Custom_File__c/fields/Document_Label__c.field-meta.xml
<CustomField>
    <fullName>Document_Label__c</fullName>
    <label>Document Label</label>
    <length>100</length>
    <type>Text</type>
</CustomField>