force-app/main/default/objects/Custom_File__c/fields/File_Uploaded_2__c.field-meta.xml
<CustomField>
    <fullName>File_Uploaded_2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>File Uploaded 2</label>
    <type>Checkbox</type>
</CustomField>