force-app/main/default/objects/Custom_File__c/fields/Review__c.field-meta.xml
<CustomField>
    <fullName>Review__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Review</label>
    <referenceTo>Review__c</referenceTo>
    <relationshipLabel>Custom Files</relationshipLabel>
    <relationshipName>Custom_Files</relationshipName>
    <type>Lookup</type>
</CustomField>